[package]
name = "drone"
version = "0.2.1"
edition = "2021"
authors = ["Deathwing <hi@deathwing.me>"]
description = "A caching reverse-proxy application for the Hive blockchain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
lru_time_cache = "0.11.11"
humantime = "2.1.0"
config = "0.13.3"
serde_with = "2.3.1"
actix-cors = "0.6.4"
