[package]
name = "drone"
version = "0.2.6"
edition = "2021"
authors = ["Deathwing <hi@deathwing.me>"]
description = "A caching reverse-proxy application for the Hive blockchain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
serde_yaml = "0.8"
humantime = "2.1.0"
config = "0.13.3"
actix-cors = "0.6.4"
async-recursion = "1.0.5"
moka = { version = "0.12.5", features = ["sync"] }
sequence_trie = "0.3.6"
futures-util = "0.3.30"
chrono = "0.4.34"
tokio = { version = "1.36.0", features = ["sync"] }
