[package]
name = "drone"
version = "0.3.0"
edition = "2021"
authors = ["Deathwing <hi@deathwing.me>"]
description = "A caching reverse-proxy application for the Hive blockchain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.8"
humantime = "2.1.0"
config = "0.13.3"
actix-cors = "0.7.0"
async-recursion = "1.0.5"
moka = { version = "0.12.5", features = ["future"] }
sequence_trie = "0.3.6"
chrono = "0.4.34"
tokio = { version = "1.36.0", features = ["sync"] }
actix-request-identifier = "4.1.0"
log = "0.4.21"
env_logger = "0.11.2"
